--- a/WebInstaller/WebInstaller.csproj
+++ b/WebInstaller/WebInstaller.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\ViewModels\" />
+  </ItemGroup>
+
 
 
 </Project>
